# dumbchat

./: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/compose/: +page.svelte  font-size.js
src/routes/inbox/: +page.svelte
